-added docker support, implemented server and websocket (doesnt work inside docker)

--- a/raspberry_server/templates/temperaturas.html
+++ b/raspberry_server/templates/temperaturas.html
@@ -2,7 +2,7 @@
   <div class="flex flex-1 w-full h-full items-center justify-center"">
     <div class="rounded-full w-36 h-36 bg-[#363636] border border-1 border-neutral-500 shadow-md flex flex-col items-center justify-center shadow-lg">
       <div class="rounded-full w-28 h-28 bg-[#363636] border border-4 border-[#9487AF] shadow-md flex flex-col items-center justify-center">
-        <span class="text-white font-bold text-md" id="temperature">25°C</span>
+        <span class="text-white font-bold text-md">25°C</span>
         <span class="text-white text-sm">Temperatura</span>
         <span class="text-white text-sm">Sala</span>
       </div>
